--- a/packages/activity-diagram/package.json
+++ b/packages/activity-diagram/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@top-datav/activity-diagram",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "> TODO: description",
   "author": "jufeng <jufeng@bicitech.cn>",
   "homepage": "",
@@ -25,8 +25,5 @@
   "peerDependencies": {
     "@top-datav/core": "^1.0.0"
   },
-  "gitHead": "0eb4af2a70da38173763bbd831060d823e904540",
-  "dependencies": {
-
-  }
+  "gitHead": "0eb4af2a70da38173763bbd831060d823e904540"
 }
