--- a/packages/store-utils/package.json
+++ b/packages/store-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@top-datav/store-utils",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "> TODO: description",
   "author": "jufeng <jufeng@bicitech.cn>",
   "homepage": "",
@@ -22,6 +22,5 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "gitHead": "0eb4af2a70da38173763bbd831060d823e904540",
-  "dependencies": {}
+  "gitHead": "0eb4af2a70da38173763bbd831060d823e904540"
 }
