fix: 修改package.json依赖

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -37,26 +37,26 @@
     "@top-datav/sequence-diagram": "^1.0.11",
     "@top-datav/store-utils": "^1.0.4",
     "ahooks": "^2.9.1",
-    "react-table": "^7.6.3"
+    "react-table": "^7.6.3",
+    "flv.js": "^1.5.0",
+    "react-color": "^2.19.3",
+    "reactcss": "^1.2.3",
+    "cash-dom": "^8.1.0",
+    "classnames": "^2.2.6"
   },
   "devDependencies": {
     "antd": "^4.10.0",
     "axios": "^0.21.0",
     "bici-transformers": "^0.19.7",
-    "cash-dom": "^8.1.0",
-    "classnames": "^2.2.6",
     "echarts": "^5.2.1",
     "file-saver": "^2.0.2",
-    "flv.js": "^1.5.0",
     "html2canvas": "^1.0.0-rc.7",
     "jsencrypt": "3.0.0-rc.1",
     "mitt": "^2.1.0",
-    "react-color": "^2.19.3",
     "react-dnd": "7.0.2",
     "react-dnd-html5-backend": "7.0.2",
     "react-draggable": "4.4.3",
-    "react-responsive-carousel": "^3.2.21",
-    "reactcss": "^1.2.3"
+    "react-responsive-carousel": "^3.2.21"
   },
   "gitHead": "6ed8c316bac837353031e4ca099c3df533893a18"
 }
